<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Varna Traffic</string>
    <string name="tableHeaderDistance">дист</string>
    <string name="tableHeaderDelay"></string>
    <string name="tableHeaderLeft">идва</string>
    <string name="tableHeaderArrive">разп</string>
    <string name="tableHeaderNumber">номер</string>
    <string name="tableHeaderEmptyString">Няма автобуси в този момент</string>
    <string name="refreshButton">Обнови</string>
    <string name="selectBusStopButton">Избирам спирка</string>

    <string name="mainActivityLast5Label">Последните 5 спирки</string>

    <string name="tableScheduleHeader">разписание</string>
    <string name="tableScheduleHeaderNumber">номер</string>


    <string name="noInternetConnectionMessage">Няма интернет връзка, проверете дали сте свързани към интернет</string>
    <string name="noServerAccessMessage">Грешка при достъпа към сървъра</string>
    <string name="MessageHeader">Съобщение</string>

</resources>
